# ai-research-assistant

./: .dockerignore  .env.example  .gitignore  DEMO_SCRIPT.md  Dockerfile  LICENSE  Makefile  README.md  SUBMISSION_WRITEUP.md  docker-compose.yml  pyproject.toml
src/ai_research_assistant/: __init__.py  agent.py  audit.py  config.py  eval_set_1.evalset.json  fast_api_app.py  mcp_server.py  security.py
tests/: conftest.py  test_agent_graph.py  test_api.py  test_audit.py  test_callback_invocation.py  test_mcp_tools.py  test_security.py
